--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,6 +4,20 @@
 $primary-color: #001d3d;
 $white-color: #ffffff;
 $orange-red-color: #f72d2d;
+// Colors to be used
+$light-yellow-color: #ffd60a;
+$navyblue-color: #003566;
+$dark-yellow-color: #ffc300;
+// $color: #001d3d;
+// $color: #000814;
+// $color: #e5e5e5;
+// $color: #fca311;
+// $color: #14213d;
+// $color: #669bbc;
+// $color: #003049;
+// $color: #fdf0d5;
+// $color: #c1121f;
+// $color: #780000;
 
 * {
   margin: 0;
@@ -601,7 +615,6 @@ button {
   }
 }
 
-
 // <--------- ADD PET STYLES ------------------->
 .form-container {
   background: hsl(86, 85%, 95%);
@@ -661,7 +674,7 @@ button {
   background-color: hsl(206, 82%, 63%);
 }
 .button-google {
-  background-color: hsl(7, 71%, 55%); 
+  background-color: hsl(7, 71%, 55%);
 }
 .button-linkedin {
   background-color: hsl(196, 100%, 43%);
@@ -669,13 +682,13 @@ button {
 /*--------------------
 Form
 --------------------*/
-.signup-form{
+.signup-form {
   fieldset {
     border: none;
     padding: 0;
     margin: 20px 0;
     position: relative;
-    
+
     input {
       width: 100%;
       height: 48px;
@@ -683,24 +696,23 @@ Form
       padding: 15px 40px 15px 15px;
       border-radius: 5px;
       font-size: 14px;
-      outline: none!important;
+      outline: none !important;
       border: 1px solid hsla(0, 0, 0, 0.3);
       box-shadow: inset 0 1px 4px hsla(0, 0, 0, 0.2);
       vertical-align: top;
     }
-     
   }
 }
-.button-submit{
+.button-submit {
   width: 100%;
-    outline: none!important;
-    background: linear-gradient(-5deg, hsl(86, 61%, 44%), hsl(86, 65%, 54%));
-    border: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    box-shadow: 0 3px 0px hsla(86, 21%, 44%, 0.2);
-    text-shadow: 0 2px 3px hsla(0, 0, 0, 0.2);
-  }
+  outline: none !important;
+  background: linear-gradient(-5deg, hsl(86, 61%, 44%), hsl(86, 65%, 54%));
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  box-shadow: 0 3px 0px hsla(86, 21%, 44%, 0.2);
+  text-shadow: 0 2px 3px hsla(0, 0, 0, 0.2);
+}
 .signup {
   position: absolute;
   top: 50%;
@@ -715,8 +727,7 @@ Form
   display: flex;
 }
 .signup-connect,
-.signup-classic
-{
+.signup-classic {
   width: 50%;
   padding: 30px 50px;
 }
@@ -724,18 +735,16 @@ Form
 .signup-connect {
   background: linear-gradient(134deg, hsl(44, 96%, 65%), hsl(34, 95%, 45%));
   color: hsl(0, 0, 100);
-  
+
   h1 {
     font-size: 30px;
     margin-top: 10px;
     margin-bottom: 40px;
     text-shadow: 0 2px 3px hsla(0, 0, 0, 0.1);
   }
-  
 }
 
 .signup-classic {
-  
   h2 {
     font-size: 16px;
     font-weight: normal;
@@ -743,29 +752,28 @@ Form
     margin-bottom: 43px;
     text-shadow: 0 2px 3px hsla(0, 0, 0, 0.1);
   }
-  
+
   fieldset::after {
-    content: '\f007';
+    content: "\f007";
     font-family: FontAwesome;
     position: absolute;
     right: 15px;
     top: 17px;
     z-index: 2;
     width: 20px;
-    color: hsla(0, 0, 0, .2);
+    color: hsla(0, 0, 0, 0.2);
     text-align: center;
   }
-  
+
   fieldset.email::after {
-    content: '\f0e0';
+    content: "\f0e0";
   }
-  
+
   fieldset.password::after {
-    content: '\f023';
+    content: "\f023";
   }
-  
 }
-.margintop-footer{
+.margintop-footer {
   margin-top: 260px;
 }
 //
@@ -974,7 +982,7 @@ Form
     min-height: 200px;
   }
 }
-.box{
+.box {
   display: none;
 }
 .alert {
@@ -984,7 +992,7 @@ Form
   margin-bottom: 1rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
-  button{
+  button {
     display: inline-block;
     text-align: center;
     align-items: flex-start;
@@ -1009,16 +1017,16 @@ p {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
-.close{
+.close {
   float: right;
   font-size: 1.875rem;
   font-weight: 700;
   line-height: 1;
   color: #000;
   text-shadow: 0 1px 0 #fff;
-  opacity: .5;
+  opacity: 0.5;
 }
-button.close{
+button.close {
   background-color: transparent;
   border: 0;
   -webkit-appearance: none;
@@ -1035,7 +1043,7 @@ button.close{
   z-index: 1;
 }
 // Filters
-div{
+div {
   display: block;
 }
 #pet-subview {
@@ -1044,17 +1052,17 @@ div{
 .two-column-layout {
   display: flex;
   margin-bottom: 30px;
-  .left-col{
+  .left-col {
     flex: 0 0 265px;
-  width: 265px;
+    width: 265px;
   }
-   .right-col {
+  .right-col {
     flex: 1 1 auto;
     padding: 0 30px;
     padding-right: 0;
     overflow: hidden;
     display: inline-block;
-}
+  }
 }
 // .two-column-layout > .left-col {
 //   flex: 0 0 265px;
@@ -1065,8 +1073,8 @@ div{
   border-radius: 6px;
   overflow: hidden;
   border: 1px solid rgba(0, 0, 0, 0.14);
-  height: 100%; 
-  // height: 1580px; 
+  height: 100%;
+  // height: 1580px;
   padding-bottom: 15px;
   margin-top: 10px;
 }
@@ -1085,7 +1093,7 @@ div{
     color: white;
     font-size: 0.875rem;
     text-decoration: none;
-      background-color: transparent;
+    background-color: transparent;
   }
 }
 .fa {
@@ -1149,32 +1157,32 @@ div{
   }
 }
 
-input{
+input {
   -webkit-rtl-ordering: logical;
   cursor: text;
   text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    text-align: start;
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-rendering: auto;
-    margin: 0;
-    overflow: visible;
+  text-indent: 0px;
+  text-shadow: none;
+  text-align: start;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-rendering: auto;
+  margin: 0;
+  overflow: visible;
 }
 .form-control {
   color: #464646 !important;
   appearance: none !important;
   background-color: rgba(255, 255, 255, 0.9) !important;
   display: block;
-    padding: 0.375rem 0.75rem;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
-  .input-group .form-control {
-    height: 43px;
-    position: relative;
+  padding: 0.375rem 0.75rem;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.input-group .form-control {
+  height: 43px;
+  position: relative;
   // border-radius: 20px;
   font-size: 16px !important;
   line-height: 1.2;
@@ -1185,25 +1193,27 @@ input{
 .input-group-append {
   margin-left: -1px;
 }
-.input-group-prepend, .input-group-append {
+.input-group-prepend,
+.input-group-append {
   display: flex;
 }
-button{
+button {
   align-items: flex-start;
   margin: 0;
   overflow: visible;
   text-transform: none;
   -webkit-appearance: button;
 }
-.btn{
+.btn {
   display: inline-block;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .input-group .btn {
   height: 43px;
@@ -1236,29 +1246,36 @@ button{
 .btn:not(:disabled):not(.disabled) {
   cursor: pointer;
 }
-// idk wth is 
-.input-group > .input-group-append > .btn, .input-group > .input-group-append > .input-group-text, .input-group > .input-group-prepend:not(:first-child) > .btn, .input-group > .input-group-prepend:not(:first-child) > .input-group-text, .input-group > .input-group-prepend:first-child > .btn:not(:first-child), .input-group > .input-group-prepend:first-child > .input-group-text:not(:first-child) {
+// idk wth is
+.input-group > .input-group-append > .btn,
+.input-group > .input-group-append > .input-group-text,
+.input-group > .input-group-prepend:not(:first-child) > .btn,
+.input-group > .input-group-prepend:not(:first-child) > .input-group-text,
+.input-group > .input-group-prepend:first-child > .btn:not(:first-child),
+.input-group
+  > .input-group-prepend:first-child
+  > .input-group-text:not(:first-child) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
 .fa-search:before {
   content: "\f002";
 }
-select{
+select {
   text-indent: 0px;
-    text-shadow: none;
-    text-align: start;
-    align-items: center;
-    white-space: pre;
-    -webkit-rtl-ordering: logical;
-    cursor: default;
-    margin: 0;
-    text-transform: none;
+  text-shadow: none;
+  text-align: start;
+  align-items: center;
+  white-space: pre;
+  -webkit-rtl-ordering: logical;
+  cursor: default;
+  margin: 0;
+  text-transform: none;
 }
 select:not(:-internal-list-box) {
   overflow: visible !important;
 }
-.form-control{
+.form-control {
   font-size: 18px !important;
   color: #464646 !important;
   appearance: none !important;
@@ -1293,7 +1310,7 @@ option:disabled {
   align-items: center;
   justify-content: space-between;
 }
-label{
+label {
   display: inline-block;
   cursor: default;
 }
@@ -1303,13 +1320,13 @@ label{
   font-weight: 400;
   white-space: nowrap;
   font-size: 0.875rem;
-    padding-left: 24px;
-    margin-bottom: 0px;
-    .checkmark {
-      width: 15px;
-      height: 15px;
-      top: 3px;
-      border: 1px solid #ced4da;
+  padding-left: 24px;
+  margin-bottom: 0px;
+  .checkmark {
+    width: 15px;
+    height: 15px;
+    top: 3px;
+    border: 1px solid #ced4da;
     border-radius: 4px;
     display: block;
     position: absolute;
@@ -1317,17 +1334,17 @@ label{
     transition: all 0.2s ease 0s;
   }
 }
-input{
+input {
   color: -internal-light-dark(black, white);
-    letter-spacing: normal;
-    word-spacing: normal;
-    -webkit-rtl-ordering: logical;
-    margin: 0;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-    display: none;
-    overflow: visible;
+  letter-spacing: normal;
+  word-spacing: normal;
+  -webkit-rtl-ordering: logical;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  display: none;
+  overflow: visible;
 }
 input[type="checkbox" i] {
   background-color: initial;
@@ -1348,10 +1365,10 @@ input[type="checkbox"] {
   vertical-align: baseline;
   border-radius: 0.25rem;
   background-color: rgba(65, 65, 65, 0.1);
-    font-size: 0.8125rem;
-    font-weight: 400;
+  font-size: 0.8125rem;
+  font-weight: 400;
 }
-span.text{
+span.text {
   color: black;
 }
 h6 {
@@ -1362,15 +1379,15 @@ h6 {
   margin-inline-end: 0px;
   margin-top: 0px;
   line-height: 1.2;
-    color: inherit;
-    font-size: 0.875rem;
-    font-weight: 600;
-    margin-bottom: 15px;
+  color: inherit;
+  font-size: 0.875rem;
+  font-weight: 600;
+  margin-bottom: 15px;
 }
 .text-uppercase {
   text-transform: uppercase !important;
 }
-// right side 
+// right side
 .cards-list-header {
   background: white;
   border: 1px solid #dddddd;
@@ -1381,32 +1398,33 @@ h6 {
   .pets-list-header {
     display: flex;
     align-items: center;
-}
-.found-title {
-  font-size: 1.75rem;
-  color: #6d6d6d;
-  margin-bottom: 0px;
+  }
+  .found-title {
+    font-size: 1.75rem;
+    color: #6d6d6d;
+    margin-bottom: 0px;
     margin-right: auto;
+  }
+  .filter-row {
+    display: flex;
+    width: 100%;
+    .left-col {
+      margin-right: auto;
+      flex: 1;
+    }
+  }
 }
-.filter-row {
-  display: flex;
-  width: 100%;
-  .left-col {
-    margin-right: auto;
-    flex: 1;
-}
-}
-}
-.right-col .btn{
-    font-weight: 700;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    line-height: 1.5;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+.right-col .btn {
+  font-weight: 700;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .btn-primary {
   color: #fff;
@@ -1417,23 +1435,23 @@ h6 {
   font-size: 14px !important;
   display: none !important;
   float: right;
-    border-radius: 50px;
-    height: 32px;
-    margin-right: 12px;
+  border-radius: 50px;
+  height: 32px;
+  margin-right: 12px;
 }
 .btn:not(:disabled):not(.disabled) {
   cursor: pointer;
 }
-h2{
+h2 {
   font-family: inherit;
-    font-weight: 700;
-    line-height: 1.2;
-    margin-top: 0;
-    display: block;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-top: 0;
+  display: block;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 .form-inline {
   display: flex;
@@ -1455,7 +1473,7 @@ h2{
   margin-right: 15px;
   font-size: 0.875rem;
   color: #a3a3a3;
-  cursor:default;
+  cursor: default;
   margin-bottom: 0px;
 }
 // @media (min-width: 576px){
@@ -1465,19 +1483,19 @@ h2{
 //     justify-content: center;
 //     margin-bottom: 0;
 // }}
-select{
-text-align: start;
-align-items: center;
-    white-space: pre;
-    -webkit-rtl-ordering: logical;
-    cursor: default;
-    margin: 0;
-    text-transform: none;
-    .form-control {
-      background-image: url(/assets/images/caret-down-black.svg);
-      background-position: center right 15px;
-      background-repeat: no-repeat;
-      padding-right: 35px;
+select {
+  text-align: start;
+  align-items: center;
+  white-space: pre;
+  -webkit-rtl-ordering: logical;
+  cursor: default;
+  margin: 0;
+  text-transform: none;
+  .form-control {
+    background-image: url(/assets/images/caret-down-black.svg);
+    background-position: center right 15px;
+    background-repeat: no-repeat;
+    padding-right: 35px;
   }
 }
 select:not(:-internal-list-box) {
@@ -1488,15 +1506,15 @@ select:not(:-internal-list-box) {
   color: #464646 !important;
   appearance: none !important;
   background-color: rgba(255, 255, 255, 0.9) !important;
-    padding: 0.375rem 0.75rem;
-    line-height: 1.5;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    height: 32px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  height: 32px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 // @media (min-width: 576px){
 // .form-inline .form-control {
@@ -1506,29 +1524,33 @@ select:not(:-internal-list-box) {
 // }}
 .right-col {
   display: flex;
-  align-items:flex-start;
+  align-items: flex-start;
 }
-.btn{
+.btn {
   display: inline-block;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1.25rem;
-    border-radius: 0.25rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    text-transform: none;
-    line-height: 0;
-    margin-right: -0.75rem;
-    .btn-link {
-      font-weight: 400;
-      color: #f84646;
-      background-color: transparent;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1.25rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-transform: none;
+  line-height: 0;
+  margin-right: -0.75rem;
+  .btn-link {
+    font-weight: 400;
+    color: #f84646;
+    background-color: transparent;
   }
 }
-button, html [type="button"], [type="reset"], [type="submit"] {
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 .btn:not(:disabled):not(.disabled) {
@@ -1567,10 +1589,10 @@ svg {
     transition: all 0.2s ease 0s;
     .img-box-main {
       margin-right: 32px;
+    }
   }
 }
-}
-div{
+div {
   display: block;
 }
 .card-body {
@@ -1586,8 +1608,8 @@ a {
   text-decoration: none;
   background-color: transparent;
 }
-.img-box{
-background-image: url(/assets/images/parrot.jpeg);
+.img-box {
+  background-image: url(/assets/images/parrot.jpeg);
   background-size: cover;
   background-position: center center;
   width: 128px;
@@ -1599,8 +1621,8 @@ background-image: url(/assets/images/parrot.jpeg);
   align-items: center;
   justify-content: center;
 }
-  
-.mt-2{
+
+.mt-2 {
   margin-top: 0.5rem !important;
 }
 .mr-auto {
@@ -1612,12 +1634,11 @@ background-image: url(/assets/images/parrot.jpeg);
   .media-body {
     flex: 1;
     overflow: hidden;
-}
-.media-body-header {
-  display: flex;
-  margin-bottom: 5px;
-  
-}
+  }
+  .media-body-header {
+    display: flex;
+    margin-bottom: 5px;
+  }
 }
 .left-box {
   margin-right: auto;
@@ -1683,12 +1704,12 @@ ul {
   border-radius: 4px;
   padding: 5px 10px;
   justify-content: space-between;
-   li {
+  li {
     display: flex;
     align-items: center;
     font-size: 0.875rem;
     padding: 0px 13px;
-}
+  }
 }
 li {
   text-align: -webkit-match-parent;
@@ -1696,7 +1717,7 @@ li {
 img {
   vertical-align: middle;
   border-style: none;
-  margin-right: 6px
+  margin-right: 6px;
 }
 .p-card-landscape + .p-card-landscape {
   margin-top: 10px;
@@ -1771,14 +1792,14 @@ img {
 //   border-radius: 16px;
 //   background-color: transparent !important;
 // }
-ul{
+ul {
   margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    margin-top: 0;
-    margin-bottom: 1rem;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 .pagination {
   display: flex;
@@ -1787,9 +1808,9 @@ ul{
   border-radius: 0.25rem;
   padding-top: 10px;
 }
-li{
+li {
   display: list-item;
-    text-align: -webkit-match-parent;
+  text-align: -webkit-match-parent;
 }
 .page-link {
   position: relative;
@@ -1797,9 +1818,9 @@ li{
   padding: 0.5rem 0.75rem;
   line-height: 1.25;
   margin-left: -1px;
-    border-top-left-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
-    border: 1px solid #dee2e6;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  border: 1px solid #dee2e6;
 }
 // .page-item:first-child .page-link {
 //   margin-left: 0;
@@ -1822,67 +1843,13 @@ li{
 .page-link:not(:disabled):not(.disabled) {
   cursor: pointer;
 }
-a{
+a {
   text-decoration: none;
 }
 .page-item:last-child .page-link {
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 //<------------------ FOOTER STYLES ---------------->
 .footer {
@@ -2003,4 +1970,3 @@ a{
   font-weight: 600;
   flex-wrap: wrap;
 }
-
